<resources>
    <string name="app_name">TabliczkaDzielenia</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_play">GRAJ</string>
    <string name="menu_lvl">Poziom</string>
    <string name="menu_authors">Autorzy</string>
    <string name="menu_exit">Zamknij</string>
    <string name="lvl_level">Poziom:</string>
    <string name="game_menu">MENU</string>
    <string name="game_goodAnswer">Bardzo dobrze!</string>
    <string name="game_wrongAnswer">Źle!</string>
    <string name="end_gameEnd">Koniec gry!</string>
    <string name="end_correctAnswers">Poprawnych odp:</string>
    <string name="end_menu">MENU</string>
    <string name="aut_authors">AUTORZY</string>
    <string name="aut_lukaszDesc">- design aplikacji</string>
    <string name="aut_pawelDesc">- osiągnięcia, poziomy trudności</string>
    <string name="end_cezarDesc">- generowanie pytań i odpowiedzi</string>

    <string-array name="diffLevelArray">
        <item>1,Łatwy,10,30</item>
        <item>2,Normalny,20,20</item>
        <item>3,Wysoki,30,15</item>
        <item>4,Ekspert,40,10</item>
        <item>5,Mistrz,50,5</item>
    </string-array>
</resources>
